--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>nothing.fighur.eddie</groupId>
   <artifactId>eddie</artifactId>
@@ -13,24 +13,18 @@
       <artifactId>lanterna</artifactId>
       <version>3.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>5.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
-      	<plugin>
-      		<artifactId>maven-jar-plugin</artifactId>
-      		<version>3.0.2</version>
-      		<executions>
-      			<execution>
-      				<id>default-jar</id>
-      				<phase>none</phase>
-      			</execution>
-      		</executions>
-      	</plugin>    	
-
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.3.0</version>
         <configuration>
           <finalName>eddie</finalName>
           <descriptorRefs>
@@ -45,8 +39,8 @@
         </configuration>
         <executions>
           <execution>
-            <id>make-assembly</id> <!-- this is used for inheritance merges -->
-            <phase>package</phase> <!-- bind to the packaging phase -->
+            <id>make-assembly</id>
+            <phase>package</phase>
             <goals>
               <goal>single</goal>
             </goals>
@@ -63,7 +57,6 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 </project>
